refactor: edit scrapper gihub client